--- a/test/Project.toml
+++ b/test/Project.toml
@@ -3,6 +3,7 @@ DOT_NiceMath = "3e56a413-cb61-4004-9b36-fbc90ffc4c6e"
 GenericFFT = "a8297547-1b15-4a5a-a998-a2ac5f1cef28"
 GenericLinearAlgebra = "14197337-ba66-59df-a3e3-ca00e7dcff7a"
 JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
