test/Project.toml -- added Zygote

--- a/test/Project.toml
+++ b/test/Project.toml
@@ -10,3 +10,5 @@ Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
+UnitfulChainRules = "f31437dd-25a7-4345-875f-756556e6935d"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
